--- a/package.json
+++ b/package.json
@@ -1,14 +1,20 @@
 {
-  "name": "proyecto_1",
+  "name": "proyecto-1",
   "version": "1.0.0",
-  "description": "",
+  "description": "proyecto 1 de DSLLO APLICACIONES WEB BACKEND",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "dev": "nodemon index.js"
   },
-  "author": "",
+  "author": "Michelle Gutierrez Marchena",
   "license": "ISC",
   "dependencies": {
-    "express": "^4.18.2"
+    "dotenv": "^16.3.1",
+    "express": "^4.18.2",
+    "mongoose": "^7.6.3"
+  },
+  "devDependencies": {
+    "nodemon": "^3.0.1"
   }
 }
